--- a/ERecruteApp-front/src/app/cv/cv.component.html
+++ b/ERecruteApp-front/src/app/cv/cv.component.html
@@ -38,6 +38,7 @@
     
     <!-- END CONTENT FRAME TOP -->
 
+
     <!-- START CONTENT FRAME BODY -->
     <div id="cv">
 
@@ -101,17 +102,17 @@
                             </ul>
                         </div>
                         <div class="panel-body">
-                            <div class="task-warning">
+                            <div class="task-warning" *ngFor="let lng of selectedLngs">
                                 <div class="task-header">
-                                    <div class="pull-left">Francais</div>
+                                    <div class="pull-left">{{lng.nom}}</div>
                                 </div>
                                 <div class="task-text">
                                     <div class="progress progress-small">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="79"
-                                            aria-valuemin="0" aria-valuemax="100" style="width: 79%;">79
+                                            aria-valuemin="0" aria-valuemax="100" style="width: 79%;">{{lng.niveau}}
                                         </div>
                                     </div>
-                                    Niveau courant
+                                    {{lng.detail}}
                                 </div>
                             </div>
                         </div>
@@ -156,23 +157,13 @@
                             </ul>
                         </div>
                         <div class="panel-body">
-                            <div class="task-warning" >
+                            <div class="task-warning" *ngFor="let exp of selectedExps">
                                 <div class="task-header">
-                                    <div class="pull-left">De 10/06/2020 à 07/06/2023</div>
+                                    <div class="pull-left">De {{exp.dateDebut}} à {{exp.dateFin}}</div>
                                 </div>
                                 <div class="task-text">
-                                    développeur, Ciment<br>
-                                    développement des applications web au département de informatique
-                                </div>
-
-                            </div>
-                            <div class="task-warning" >
-                                <div class="task-header">
-                                    <div class="pull-left">De 05/06/2024 à 12/05/2026</div>
-                                </div>
-                                <div class="task-text">
-                                    développeur, Ciment<br>
-                                    développement des applications web au département de informatique
+                                    {{exp.poste.libellePost}}, {{exp.societe.nomSociete}}<br>
+                                    {{exp.descriptionRole}} au département de {{exp.departement}}
                                 </div>
 
                             </div>
@@ -190,58 +181,19 @@
                             </ul>
                         </div>
                         <div class="panel-body">
-                            <div class="task-warning">
+                            <div class="task-warning" *ngFor="let comp of selectedComps">
                                 <div class="task-header">
-                                    <div class="pull-left">Framework Spring</div>
+                                    <div class="pull-left">{{comp.nom}}</div>
                                 </div>
                                 <div class="task-text">
                                     <div class="progress progress-small">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="75"
-                                            aria-valuemin="0" aria-valuemax="100" style="width: 75%;">75
+                                            aria-valuemin="0" aria-valuemax="100" style="width: 75%;">>{{comp.niveau}}
                                         </div>
                                     </div>
-                                    Langage de développement web
+                                    {{comp.detail}}
                                 </div>
                             </div>
-                            <div class="task-warning">
-                                    <div class="task-header">
-                                        <div class="pull-left">Angular</div>
-                                    </div>
-                                    <div class="task-text">
-                                        <div class="progress progress-small">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="75"
-                                                aria-valuemin="0" aria-valuemax="100" style="width: 75%;">75
-                                            </div>
-                                        </div>
-                                        Langage de développement web
-                                    </div>
-                                </div>
-                                <div class="task-warning">
-                                        <div class="task-header">
-                                            <div class="pull-left">Informatique</div>
-                                        </div>
-                                        <div class="task-text">
-                                            <div class="progress progress-small">
-                                                <div class="progress-bar" role="progressbar" aria-valuenow="75"
-                                                    aria-valuemin="0" aria-valuemax="100" style="width: 75%;">75
-                                                </div>
-                                            </div>
-                                            Langage de développement web
-                                        </div>
-                                    </div>
-                                    <div class="task-warning">
-                                            <div class="task-header">
-                                                <div class="pull-left">JEE</div>
-                                            </div>
-                                            <div class="task-text">
-                                                <div class="progress progress-small">
-                                                    <div class="progress-bar" role="progressbar" aria-valuenow="75"
-                                                        aria-valuemin="0" aria-valuemax="100" style="width: 75%;">75
-                                                    </div>
-                                                </div>
-                                                Langage de développement web
-                                            </div>
-                                        </div>
                         </div>
                     </div>
                 </div>
